scalalib/src/test/resource/acyclic/src/test/resources/success/pkg/mutualcyclic/a/A1.scala
package success.cyclicpackage
package a


class A1 extends b.B1{

}
