scalalib/src/test/resource/acyclic/src/test/resources/fail/cyclicpackage/a/A1.scala
package fail.cyclicpackage
package a
import acyclic.file

class A1 extends b.B1{

}
